Some items in editor and mode selectors are not translatable #61446

Closed
opened 2019-02-12 11:52:38 +01:00 by Michael Soluyanov · 3 comments

"Texture Node Editor" and "Shader Editor" are not presented in source list.

Снимок экрана от 2019-02-12 13-45-03.png

Some items changes text then current mode are selected:

Снимок экрана от 2019-02-12 10-06-15.png

"Object mode", "Edit mode" and "Texture paint" switch to untranslated version, "Weight paint" changes translate source

"Texture Node Editor" and "Shader Editor" are not presented in source list. ![Снимок экрана от 2019-02-12 13-45-03.png](https://archive.blender.org/developer/F6588693/Снимок_экрана_от_2019-02-12_13-45-03.png) Some items changes text then current mode are selected: ![Снимок экрана от 2019-02-12 10-06-15.png](https://archive.blender.org/developer/F6588702/Снимок_экрана_от_2019-02-12_10-06-15.png) "Object mode", "Edit mode" and "Texture paint" switch to untranslated version, "Weight paint" changes translate source
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz
Bastien Montagne was assigned by Michael Soluyanov 2019-02-12 11:52:59 +01:00

This issue was referenced by cf92d83c0a

This issue was referenced by cf92d83c0a33873155571f8fe6ca5de28c834a75

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61446
No description provided.