Fix NodeTree types UI messages not being properly tagged for translation.

Probably fix first part of T61446.