source/blender/nodes/composite/node_composite_tree.c
@@ -194,9 +194,9 @@ void register_node_tree_type_cmp(void)
 
 	tt->type = NTREE_COMPOSIT;
 	strcpy(tt->idname, "CompositorNodeTree");
-	strcpy(tt->ui_name, "Compositing");
+	strcpy(tt->ui_name, N_("Compositing"));
 	tt->ui_icon = 0;    /* defined in drawnode.c */
-	strcpy(tt->ui_description, "Compositing nodes");
+	strcpy(tt->ui_description, N_("Compositing nodes"));
 
 	tt->free_cache = free_cache;
 	tt->free_node_cache = free_node_cache;
