source/blender/nodes/texture/node_texture_tree.c
@@ -155,9 +155,9 @@ void register_node_tree_type_tex(void)
 
 	tt->type = NTREE_TEXTURE;
 	strcpy(tt->idname, "TextureNodeTree");
-	strcpy(tt->ui_name, "Texture Node Editor");
+	strcpy(tt->ui_name, N_("Texture Node Editor"));
 	tt->ui_icon = 0;    /* defined in drawnode.c */
-	strcpy(tt->ui_description, "Texture nodes");
+	strcpy(tt->ui_description, N_("Texture nodes"));
 
 	tt->foreach_nodeclass = foreach_nodeclass;
 	tt->update = update;
